force-app/main/default/objects/Showroom_Vehicle__c/Showroom_Vehicle__c.object-meta.xml
<CustomObject>
    <description>it is the junction object between  the Account (Showroom) and Product2 (Vehicle).</description>
    <label>Showroom Vehicle</label>
    <nameField>
        <label>Showroom Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showroom_Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>