force-app/main/default/objects/Showroom_Vehicle__c/fields/Is_Test_Drive_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Drive_Available__c</fullName>
    <formula>Vehicle__r.Test_Drive_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Test Drive Available</label>
    <type>Checkbox</type>
</CustomField>