force-app/main/default/objects/Showroom_Vehicle__c/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Showroom_Vehicles</relationshipLabel>
    <relationshipName>Showroom_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>