force-app/main/default/objects/Showroom_Vehicle__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Showroom_Vehicles</relationshipLabel>
    <relationshipName>Showroom_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>